# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.x.xx
DATE xx/xx/201x
48th Alpha Release

NEWS:

NEW: [features/improvements]
+Major performance improvements to Replace All action

BUG FIXES:
+Fix minor control sizing issue in ControlBars created by ControlBox.CreateControlBar
on GTK/MSW.
+Fix issue with Unicode normalization in search.
+Fix in buffer search operations to work better for Unicode by working around
issues where StyledTextCtrl expects UTF-8 byte offsets for some methods (SetSelection,
GetSelection, ...)
+Fix saved search flags not being propagated properly after application restart.
+Fix Calltip shortcut not working correctly due to incorrect lookup string being
sent down to completer when character to left of cursor was a paren.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.89
DATE 12/17/2011
47th Alpha Release

NEWS:

This release adds support for highlighting some new file types and some minor
improvements to the auto-completions support. The Python auto-completion has been
improved to better handle updating when external modules that are analyzed
from import statements have changed during runtime as well as improvements to
the handling of properties and member attributes.

In addition to the features listed above there has been some library and 
framework enhancements to help support future plugin development.

For details about additional changes and bug fixes please see the complete
changelog below.

NEW: [features/improvements]
+Improved Python auto-completion
+Add ability to customize spelling dictionary and behavior. Can now Ignore
spellings (per session) or Add words to the dictionary (permanent). Optional
feature only available when pyenchant is installed.